# lindiction

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-18-lindiction-mvp.md  2026-04-19-lindiction-v0.2.md  2026-04-20-lindiction-v0.3.md  2026-04-20-lindiction-v0.4.md
docs/superpowers/specs/: 2026-04-18-lindiction-mvp-design.md  2026-04-19-lindiction-v0.2-design.md  2026-04-20-lindiction-v0.3-design.md  2026-04-20-lindiction-v0.4-design.md
examples/: smoke_audio.rs  smoke_hotkey.rs  smoke_inject.rs
src/: app.rs  audio.rs  autostart.rs  config.rs  hotkey.rs  hw_detect.rs  inject.rs  lib.rs  main.rs  mic_select.rs  model_choice.rs  model_download.rs  postprocess.rs  preroll.rs  replace.rs  stt.rs  tray.rs  update.rs
systemd/: lindiction.service
tests/: integration_stt.rs
