[package]
name = "lindiction"
version = "0.7.0"
edition = "2021"
description = "Linux push-to-talk voice dictation"
license = "MIT"

[[bin]]
name = "lindiction"
path = "src/main.rs"

[lib]
name = "lindiction"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
cpal = "0.15"
dirs = "5"
global-hotkey = "0.5"
ksni = "0.2"
libc = "0.2"
notify-rust = { version = "4", default-features = false, features = ["d"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "process", "time", "io-util"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
whisper-rs = { version = "0.16", default-features = false }
which = "6"

[dev-dependencies]
hound = "3.5"   # for reading WAV in integration tests

[features]
default = []
# GPU backend features. Pick at most ONE — they're mutually exclusive at
# the whisper.cpp level (build fails on conflicting backends). Pure-CPU
# build uses the empty default feature set.
#
# cuda     — NVIDIA GPUs (Compute Capability 5.0+). Needs CUDA runtime
#            on the target host.
# vulkan   — Cross-vendor GPU via Vulkan. Needs libvulkan.so.1 (on every
#            modern Linux). Typical for Intel Arc / AMD without ROCm.
# hipblas  — AMD GPUs via ROCm. Needs ROCm runtime on the target host.
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
hipblas = ["whisper-rs/hipblas"]

[package.metadata.deb]
maintainer = "Andre Hugo <cortexpeterpan@gmail.com>"
copyright = "2026, Andre Hugo"
license-file = ["LICENSE", "0"]
extended-description = """
Push-to-talk voice dictation for Linux using whisper.cpp.
Hold Ctrl+Alt+Space, speak, release, and the transcribed text is typed
at the cursor. First run auto-downloads the default small.en model
(~488 MB).
"""
depends = "$auto, xdotool, curl, libasound2, libpulse0"
section = "sound"
priority = "optional"
assets = [
    ["target/release/lindiction", "usr/bin/", "755"],
    ["systemd/lindiction.service", "lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/lindiction/README", "644"],
    ["LICENSE", "usr/share/doc/lindiction/copyright", "644"],
]
